--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -60,6 +60,7 @@ jobs:
         uses: actions/configure-pages@v3
         with:
           static_site_generator: gatsby
+          generator_config_file: gatsby-config.ts
       - name: Restore cache
         uses: actions/cache@v3
         with:
