fix: fixup 754ba0

--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -77,13 +77,14 @@ jobs:
           ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Lint
         run: |
-          ${{ steps.detect-package-manager.outputs.manager }} run typecheck
           ${{ steps.detect-package-manager.outputs.manager }} run lint
           ${{ steps.detect-package-manager.outputs.manager }} run format:check
       - name: Build with Gatsby
         env:
           PREFIX_PATHS: "true"
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
+      - name: Typecheck
+        run: ${{ steps.detect-package-manager.outputs.manager }} run typecheck
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
