--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
-    "format": "prettier . --write",
-    "format:check": "prettier . --check"
+    "format": "prettier --ignore-path .gitignore . --write",
+    "format:check": "prettier --ignore-path .gitignore . --check"
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
