--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^8.46.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-define-config": "^1.21.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.31",
     "prettier": "^3.0.1",
     "typescript": "^5.1.6"
   }
