--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format:check": "prettier --ignore-path .gitignore . --check"
   },
   "dependencies": {
+    "@material/web": "^1.0.0",
     "@mdx-js/react": "^2.3.0",
     "d3-color": "^3.1.0",
     "gatsby": "^5.11.0",
@@ -26,24 +27,27 @@
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
     "gatsby-source-filesystem": "^5.11.0",
+    "katex": "^0.16.9",
     "mathjs": "^11.9.1",
     "p5": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-katex": "^3.0.1",
     "three": "^0.155.0"
   },
   "devDependencies": {
     "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@types/d3-color": "^3.1.0",
     "@types/eslint": "^8.44.1",
+    "@types/katex": "^0.16.3",
     "@types/node": "^20.3.3",
     "@types/p5": "^1.6.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-katex": "^3.0.1",
     "@types/three": "^0.155.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "babel-eslint": "^10.1.0",
     "eslint": "^8.46.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-define-config": "^1.21.0",
