--- a/package.json
+++ b/package.json
@@ -17,22 +17,26 @@
     "format:check": "prettier --ignore-path .gitignore . --check"
   },
   "dependencies": {
-    "@material/web": "^1.0.0",
+    "@material/web": "^1.0.1",
     "@mdx-js/react": "^2.3.0",
+    "@thi.ng/color": "^5.6.0",
     "d3-color": "^3.1.0",
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
-    "gatsby-plugin-manifest": "^5.11.0",
+    "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-mdx": "^5.11.0",
-    "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-plugin-sass": "^6.12.3",
+    "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-sitemap": "^6.11.0",
     "gatsby-source-filesystem": "^5.11.0",
     "katex": "^0.16.9",
     "mathjs": "^11.9.1",
+    "node-gyp": "^10.0.1",
     "p5": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
+    "sass": "^1.69.5",
     "three": "^0.155.0"
   },
   "devDependencies": {
