chore: fix styling issues and add new files

--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-sitemap": "^6.11.0",
     "gatsby-source-filesystem": "^5.11.0",
+    "gifencoder": "^2.0.1",
     "katex": "^0.16.9",
-    "mathjs": "^11.9.1",
+    "mathjs": "^12.1.0",
     "node-gyp": "^10.0.1",
     "p5": "^1.7.0",
     "react": "^18.2.0",
@@ -43,7 +44,9 @@
     "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@types/d3-color": "^3.1.0",
     "@types/eslint": "^8.44.1",
+    "@types/gifencoder": "^2.0.3",
     "@types/katex": "^0.16.3",
+    "@types/mathjs": "^9.4.2",
     "@types/node": "^20.3.3",
     "@types/p5": "^1.6.2",
     "@types/react": "^18.2.14",
@@ -52,6 +55,7 @@
     "@types/three": "^0.155.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
+    "buffer": "^6.0.3",
     "eslint": "^8.46.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-define-config": "^1.21.0",
