--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "@types/three": "^0.155.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "buffer": "^6.0.3",
     "eslint": "^8.46.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-define-config": "^1.21.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.31",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "^3.0.1",
     "typescript": "^5.1.6"
   }
