--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format:check": "prettier --ignore-path .gitignore . --check"
   },
   "dependencies": {
+    "@catppuccin/palette": "^1.0.3",
     "@material/web": "^1.0.1",
     "@mdx-js/react": "^2.3.0",
     "@thi.ng/color": "^5.6.0",
