--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
     "lint": "eslint --ignore-path .gitignore .",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "yarn lint --fix",
     "format": "prettier --ignore-path .gitignore . --write",
     "format:check": "prettier --ignore-path .gitignore . --check"
   },
