--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -50,10 +50,14 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: corepack enable
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: 20
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         id: pages
