--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^7.10.0",
     "browserslist": "^4.23.0",
-    "eslint": "^9.3.0",
+    "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-define-config": "^2.1.0",
+    "eslint-plugin-react": "^7.34.2",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.32",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "prettier": "^3.2.5",
