--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@thi.ng/color": "^5.6.45",
     "base64-stream": "^1.0.0",
     "d3-color": "^3.1.0",
+    "esm-potrace-wasm": "^0.4.1",
     "gatsby": "^5.13.4",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
