chore: Update dependencies and configurations

--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "dependencies": {
     "@catppuccin/palette": "^1.1.1",
     "@material/web": "^1.4.1",
-    "@mdx-js/react": "^2.0.0",
+    "@mdx-js/react": "^3.0.1",
     "@thi.ng/color": "^5.6.45",
     "base64-stream": "^1.0.0",
     "esm-potrace-wasm": "^0.4.1",
-    "gatsby": "^5.13.4",
+    "gatsby": "^5.13.5",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-mdx": "^5.13.1",
@@ -36,15 +36,16 @@
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "gifencoder": "^2.0.1",
     "katex": "^0.16.10",
     "mathjs": "^12.4.2",
-    "node-gyp": "^10.1.0",
     "p5": "^1.9.3",
+    "potrace": "^2.1.8",
     "react": "^18.2.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
-    "sass": "^1.77.1",
+    "sass": "^1.77.4",
     "three": "^0.165.0"
   },
   "devDependencies": {
@@ -54,14 +55,16 @@
     "@types/gifencoder": "^2.0.3",
     "@types/katex": "^0.16.7",
     "@types/mathjs": "^9.4.2",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.11.19",
     "@types/p5": "^1.7.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/potrace": "^2.1.5",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@types/react-katex": "^3.0.1",
     "@types/three": "^0.165.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^7.10.0",
+    "babel-preset-gatsby": "^3.13.2",
     "browserslist": "^4.23.0",
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
@@ -70,7 +73,7 @@
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.32",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5",
+    "typescript": "^5.3.3",
     "webpack-glsl-loader": "^1.0.1"
   }
 }
